--- a/biblio_local_old.bib
+++ b/biblio_local_old.bib
@@ -1,3 +1,155 @@
+@article{abubakar1998three,
+  title={Three-dimensional nonlinear inversion in cross-well electrode logging},
+  author={Abubakar, Aria and den Berg, Peter M},
+  journal={Radio Science},
+  volume={33},
+  number={4},
+  pages={989--1004},
+  year={1998},
+  publisher={Wiley Online Library}
+}
+
+@article{abubakar2000three,
+  title={Three-dimensional inverse scattering applied to cross-well induction sensors},
+  author={Abubakar, Aria and Van den Berg, Peter M},
+  journal={Geoscience and Remote Sensing, IEEE Transactions on},
+  volume={38},
+  number={4},
+  pages={1669--1681},
+  year={2000},
+  publisher={IEEE}
+}
+
+@article{abubaker2001total,
+  title={Total variation as a multiplicative constraint for solving inverse problems},
+  author={Abubaker, A and Van den Berg, Peter M},
+  journal={Image Processing, IEEE Transactions on},
+  volume={10},
+  number={9},
+  pages={1384--1392},
+  year={2001},
+  publisher={IEEE}
+}
+
+@article{abubakar2002imaging,
+  title={Imaging of biomedical data using a multiplicative regularized contrast source inversion method},
+  author={Abubakar, Aria and Van den Berg, Peter M and Mallorqui, Jordi J},
+  journal={Microwave Theory and Techniques, IEEE Transactions on},
+  volume={50},
+  number={7},
+  pages={1761--1771},
+  year={2002},
+  publisher={IEEE}
+}
+
+@article{abubakar2003two,
+  title={Two-and three-dimensional algorithms for microwave imaging and inverse scattering},
+  author={Abubakar, A and Van den Berg, PM and Semenov, SY},
+  journal={Journal of Electromagnetic Waves and Applications},
+  volume={17},
+  number={2},
+  pages={209--231},
+  year={2003},
+  publisher={Taylor \& Francis}
+}
+
+@article{abubakar2004robust,
+  title={A robust iterative method for Born inversion},
+  author={Abubakar, Aria and Van den Berg, Peter M and Semenov, Serguei Y},
+  journal={Geoscience and Remote Sensing, IEEE Transactions on},
+  volume={42},
+  number={2},
+  pages={342--354},
+  year={2004},
+  publisher={IEEE}
+}
+
+@article{abubakar2004iterative,
+  title={Iterative forward and inverse algorithms based on domain integral equations for three-dimensional electric and magnetic objects},
+  author={Abubakar, Aria and van den Berg, Peter M},
+  journal={Journal of computational physics},
+  volume={195},
+  number={1},
+  pages={236--262},
+  year={2004},
+  publisher={Elsevier}
+}
+
+@article{abubakar2005diagonalized,
+  title={The diagonalized contrast source approach: an inversion method beyond the Born approximation},
+  author={Abubakar, Aria and Habashy, Tarek M and van den Berg, Peter M and Gisolf, Dries},
+  journal={Inverse problems},
+  volume={21},
+  number={2},
+  pages={685},
+  year={2005},
+  publisher={IOP Publishing}
+}
+
+@article{abubakar2005application,
+  title={Application of the multiplicative regularized contrast source inversion method on TM-and TE-polarized experimental Fresnel data},
+  author={Abubakar, Aria and van den Berg, Peter M and Habashy, Tarek M},
+  journal={Inverse Problems},
+  volume={21},
+  number={6},
+  pages={S5},
+  year={2005},
+  publisher={IOP Publishing}
+}
+
+@article{abubakar2007diagonalized,
+  title={The diagonalized contrast source inversion approach for elastic wave inversion},
+  author={Abubakar, Aria and Habashy, Tarek M},
+  journal={Ultrasonics, Ferroelectrics and Frequency Control, IEEE Transactions on},
+  volume={54},
+  number={9},
+  pages={1834--1840},
+  year={2007},
+  publisher={IEEE}
+}
+
+@article{abubakar2008finite,
+  title={A finite-difference contrast source inversion method},
+  author={Abubakar, Aria and Hu, W and Van Den Berg, PM and Habashy, TM},
+  journal={Inverse Problems},
+  volume={24},
+  number={6},
+  pages={065004},
+  year={2008},
+  publisher={IOP Publishing}
+}
+
+@article{abubakar2009application,
+  title={Application of the finite-difference contrast-source inversion algorithm to seismic full-waveform data},
+  author={Abubakar, Aria and Hu, Wenyi and Habashy, Tarek M and van den Berg, Peter M},
+  journal={Geophysics},
+  volume={74},
+  number={6},
+  pages={WCC47--WCC58},
+  year={2009},
+  publisher={Society of Exploration Geophysicists}
+}
+
+@inproceedings{abubakar2010multiplicative,
+  title={Multiplicative regularized Gauss-Newton approach for three-dimensional microwave imaging},
+  author={Abubakar, Aria and Habashy, Tarek M},
+  booktitle={Microwave Symposium Digest (MTT), 2010 IEEE MTT-S International},
+  pages={1596--1599},
+  year={2010},
+  organization={IEEE}
+}
+
+@article{abubakar2012microwave,
+  title={Microwave Data Inversions Using the Source-Receiver Compression Scheme},
+  author={Abubakar, Aria and Habashy, Tarek M and Pan, Guangdong},
+  journal={Antennas and Propagation, IEEE Transactions on},
+  volume={60},
+  number={6},
+  pages={2853--2864},
+  year={2012},
+  publisher={IEEE}
+}
+
 @article{abubakar2012application,
   title={Application of the Multiplicative Regularized Gauss--Newton Algorithm for Three-Dimensional Microwave Imaging},
   author={Abubakar, Aria and Habashy, Tarek M and Pan, Guangdong and Li, Mao-Kun},
@@ -9,25 +161,5 @@
   publisher={IEEE}
 }
 
-@article{abubakar20082,
-  title={2.5 D forward and inverse modeling for interpreting low-frequency electromagnetic measurements},
-  author={Abubakar, A and Habashy, TM and Druskin, VL and Knizhnerman, L and Alumbaugh, D},
-  journal={Geophysics},
-  volume={73},
-  number={4},
-  pages={F165--F177},
-  year={2008},
-  publisher={Society of Exploration Geophysicists}
-}
 
-@article{zhang2004three,
-  title={Three-dimensional nonlinear image reconstruction for microwave biomedical imaging},
-  author={Zhang, Zhong Qing and Liu, Qing Huo},
-  journal={Biomedical Engineering, IEEE Transactions on},
-  volume={51},
-  number={3},
-  pages={544--548},
-  year={2004},
-  publisher={IEEE}
-}
 
